--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -38,7 +38,7 @@
 {% block content %}
         <ul class="nav nav-tabs mt-2" id="mainTabs" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="nodes-tab" data-bs-toggle="tab" data-bs-target="#nodes-tab-pane" type="button" role="tab">Active Nodes</button>
+                <button class="nav-link" id="nodes-tab" data-bs-toggle="tab" data-bs-target="#nodes-tab-pane" type="button" role="tab">Active Nodes</button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="jobs-tab" data-bs-toggle="tab" data-bs-target="#jobs-tab-pane" type="button" role="tab" aria-controls="jobs-tab-pane" aria-selected="false">Job Queue</button>
@@ -56,7 +56,7 @@
 
         <div class="tab-content" id="mainTabContent">
             <!-- Nodes Tab -->
-            <div class="tab-pane fade show active" id="nodes-tab-pane" role="tabpanel">
+            <div class="tab-pane fade" id="nodes-tab-pane" role="tabpanel">
                 <div id="db-error-alert" class="alert alert-danger mt-3 {{ 'd-none' if not db_error }}">
                     <strong>Database Error:</strong> {{ db_error }}
                 </div>
