--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -950,7 +950,7 @@
                             <label for="plex-password" class="form-label">Plex Password</label>
                             <input type="password" class="form-control" id="plex-password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Sign In</button>
+                        <button type="submit" class="btn btn-primary w-100" type="button">Sign In</button>
                     </form>
                     <div id="plex-login-status" class="mt-3"></div>
                 </div>
